force-app/main/core/objects/Slack_Configuration__c/Slack_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Slack Configuration</label>
</CustomObject>