force-app/main/core/objects/Slack_Configuration__c/fields/Bot_Token__c.field-meta.xml
<CustomField>
    <fullName>Bot_Token__c</fullName>
    <label>Bot Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>