force-app/main/core/objects/Slack_Configuration__c/fields/Digital_Lead_Channel__c.field-meta.xml
<CustomField>
    <fullName>Digital_Lead_Channel__c</fullName>
    <label>Digital Lead Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>