force-app/main/core/objects/Slack_Configuration__c/fields/Post_Message_URL__c.field-meta.xml
<CustomField>
    <fullName>Post_Message_URL__c</fullName>
    <label>Post Message URL</label>
    <type>Url</type>
</CustomField>